2003-02-09  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/paginate_psprint.c (print_page): Set paper name, so it
	convinces ps printers to use to right size.

2003-02-07  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/properties.c (properties_show): Hide the dialog if the
	object is NULL (get rid of 'no properties' randomly popping up).

2003-02-06  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/pixbuf/pixbuf.c (export_data): Adjust width and height
	for diagrams not starting at origo.

2003-02-05  Lars Clausen  <lrclause@cs.uiuc.edu>

	* dia.spec (BuildRequires): Use libxml2-devel.

	* plug-ins/pixbuf/Makefile.am: Added to CVS.

	* RELEASE-PROCESS: Note on RPM version numbers.

	* app/interface.c (create_display_shell): Don't set as toolbar
	under Unix, either.  Especially not the diagram shell.  It removes
	it from the taskbar and makes it unresizable, always-on-top with
	OpenBox.  TOOLBAR != TOOLBOX.  Setting toolbox to the only
	appropriate thing, UTILITY, is not good either, you lose resizing
	and minimizing/maximizing under OpenBox.

	* app/menus.c (display_menu_items): Set delete item to use Delete.

2003-02-04  Lars Clausen  <lrclause@cs.uiuc.edu>

	* dia.spec (BuildRequires, Requires): Updated for Gtk2
	requirements.

	* app/disp_callbacks.c (ddisplay_canvas_events): Only add a
	display flush when getting focus in, or we may get an update after
	the diagram has been destroyed in some cases.  Fixes bug #105221.

	* plug-ins/xfig/xfig-import.c: Notes on the splines used by XFig.

	* lib/diarenderer.c: Notes on the basis matrix for our beziers.

	* app/app_procs.c (app_init): Fixed missing popt context for Gnome
	- gnome-compiled Dia will now read files specified on the command line.

2003-02-03  Lars Clausen  <lrclause@cs.uiuc.edu>

	* INSTALL (REQUIREMENTS): Updated requirements section.

	* configure.in: Better finite() check from Mårten Svantesson
	<f95-msv@nada.kth.se>.  Doesn't seem to generate strange dangly
	if's. 
	