@@ -1,5 +1,9 @@
 2003-02-09  Lars Clausen  <lrclause@cs.uiuc.edu>
 
+	* objects/flowchart/box.c (box_update_data): Applied patch from
+	Eivind Tagseth <eivind-gnome@multinet.no> to allow resize (with
+	comment). 
+
 	* app/paginate_psprint.c (print_page): Set paper name, so it
 	convinces ps printers to use to right size.
 
